# beetcamp

./: CHANGELOG.md  pyproject.toml
.github/workflows/: build.yml
beetsplug/bandcamp/: __init__.py  metaguru.py
