[tool.poetry]
name = "beetcamp"
version = "0.20.0a0"
description = "Bandcamp autotagger source for beets (http://beets.io)."
authors = ["Šarūnas Nejus <snejus@pm.me>"]
readme = "README.md"
license = "GPL-2.0"
homepage = "https://github.com/snejus/beetcamp"
repository = "https://github.com/snejus/beetcamp"

packages = [{ include = "beetsplug" }]
include = ["LICENSE", "README.md"]

keywords = ["music", "bandcamp", "beets", "metadata"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Text Processing :: General",
]

[tool.poetry.urls]
Changelog = "https://github.com/snejus/beetcamp/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/snejus/beetcamp/issues"

[tool.poetry.dependencies]
python = ">=3.8, <4"

pycountry = ">=20.7.3"
beets = ">=1.4,<=2"
httpx = ">=0.27.0"
ordered-set = ">=4.0"
packaging = ">=24.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
coveralls = { version = ">=4.0.1", python = ">=3.8,<3.13" }
flake8 = ">=3.8.4"
flake8-bugbear = ">=22.7.1"
flake8-comprehensions = ">=3.10.0"
flake8-eradicate = ">=1.3.0"
mypy = ">=0.790"
pylint = ">=2.7.4"
pytest = ">=6.2"
pytest-cov = ">=2.10.1"
pytest-randomly = ">=3.10"
pytest-xdist = ">=3.5.0"
rich-tables = "*"

[tool.poetry.scripts]
beetcamp = "beetsplug.bandcamp:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
